--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ import SocialLinks from "./SocialLinks.astro";
 const today = new Date();
 ---
 
-<footer class="rounded-lg">
+<footer class="rounded-t-xl">
 	&copy; {today.getFullYear()} Your name here. All rights reserved.
 	<SocialLinks class:list={'social-links-a'} />
 </footer>
