--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,12 +4,11 @@ import HeaderLink from './HeaderLink.astro';
 import SocialLinks from './SocialLinks.astro';
 ---
 
-<header class="flex justify-center">
-	<nav class="w-full px-4 rounded-xl bg-white">
-		<div class="flex justify-between items-center">
+<header class="bg-white rounded-b-xl">
+	<nav class="w-full px-4">
+		<div class="flex justify-between items-center max-[375px]:justify-center">
 			<h2><a href="/">{SITE_TITLE}</a></h2>
-			<div class="internal-links px">
-				<HeaderLink href="/">Home</HeaderLink>
+			<div class="internal-links">
 				<HeaderLink href="/b">Blog</HeaderLink>
 				<HeaderLink href="/about">About</HeaderLink>
 			</div>
@@ -20,8 +19,7 @@ import SocialLinks from './SocialLinks.astro';
 <style>
 	header {
 		margin: 0;
-		/* padding: 0 1em; */
-		background: white;
+		padding: 0 1em;
 		box-shadow: 0 2px 8px rgba(var(--black), 5%);
 	}
 	h2 {
@@ -33,11 +31,6 @@ import SocialLinks from './SocialLinks.astro';
 	h2 a.active {
 		text-decoration: none;
 	}
-	/* nav {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-	} */
 	nav a {
 		padding: 1em 0.5em;
 		color: var(--black);
@@ -48,7 +41,6 @@ import SocialLinks from './SocialLinks.astro';
 		text-decoration: none;
 		border-bottom-color: hsl(var(--primary-500));
 	}
-	.social-links,
 	.social-links a {
 		display: flex;
 	}
@@ -56,5 +48,16 @@ import SocialLinks from './SocialLinks.astro';
 		.social-links {
 			display: none;
 		}
+	}
+	@media (max-width: 375px) {
+		.internal-links {
+			display: none;
+		}
+
+		nav {
+			padding: 1.79rem;
+		}
+
+
 	}
 </style>
