--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -4,7 +4,7 @@ import BaseHead from '../components/BaseHead.astro';
 import Footer from '../components/Footer.astro';
 import FormattedDate from '../components/FormattedDate.astro';
 import Header from '../components/Header.astro';
-
+import "../styles/global.css";
 type Props = CollectionEntry<'blog'>['data'];
 
 const { title, description, pubDate, updatedDate, readingTime, heroImage } = Astro.props;
@@ -53,27 +53,32 @@ const { title, description, pubDate, updatedDate, readingTime, heroImage } = Ast
 			}
 
 			@media (max-width: 720px) {
-				main {
-					width: 450px;
-				}
 				.title h1 {
 					font-size: 2em;
 				}
+				.prose {
+				max-width: calc(100% + 1em);
+				}
+				main {
+					margin-top: 40px;
+				}
 			}
-
+			@media (max-width: 425px) {
+				
+			}
 		</style>
 	</head>
 
-	<body class="grid grid-rows-[auto,1fr,auto] min-h-screen max-w-6xl mx-auto ">
+	<body class="">
 		<Header />
 		<main>
-			<article class="mt-12 pl-8">
-				<div class="hero-image">
+			<article class="">
+				<div class="hero-image pl-8">
 					{heroImage && <img width={1020} height={510} src={heroImage} alt="" />}
 				</div>
 				<div class="prose">
 					<div class="title">
-						<div class="date flex gap-4 justify-center">
+						<div class="date flex gap-4 justify-center pl-8">
 							<span>
 							<FormattedDate date={pubDate} />
 							{
@@ -88,7 +93,7 @@ const { title, description, pubDate, updatedDate, readingTime, heroImage } = Ast
 								Reading: {readingTime}min
 							</span>
 						</div>
-						<h1>{title}</h1>
+						<h1 class="pl-8">{title}</h1>
 						<hr />
 					</div>
 					<slot />
