--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,26 @@
 ---
-// Welcome to Astro! Everything between these triple-dash code fences
-// is your "component frontmatter". It never runs in the browser.
-console.log('This runs in your terminal, not the browser!');
-import HighlightBox from '../components/highlight-box.astro';
-import Layout from "../layouts/Layout.astro";
+import BaseHead from '../components/BaseHead.astro';
+import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
+import { SITE_DESCRIPTION, SITE_TITLE } from '../consts';
+
 ---
-<!-- Below is your "component template." It's just HTML, but with
-    some magic sprinkled in to help you build great templates. -->
-<Layout>
-  <h1>Hello Bro!</h1>
-  <a href="/b" class="">Go To Blog</a>
-  <HighlightBox>
-    Astro is an all-in-one web framework. It includes everything you need to create a website, built-in. There are also hundreds of different integrations and API hooks available to customize a project to your exact use case and needs.
-  </HighlightBox>
-</Layout>
+
+<!doctype html>
+<html lang="en">
+	<head>
+		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+	</head>
+	<body class="flex flex-col min-h-screen ">
+		<div class="">
+			<Header />
+		</div>
+		<main class="flex-1">
+			<h1>🧑‍🚀 Hello I'am Gaurav !</h1>
+			<p>Welcome to the blog of the future! 🚀</p>
+		</main>
+		<div class="">
+			<Footer />
+		</div>
+	</body>
+</html>
